--- a/src/components/loader/loader.module.css
+++ b/src/components/loader/loader.module.css
@@ -11,10 +11,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position:sticky;
+    position:absolute;
     left: 20px;
     margin-left: 10%;
-    top:80%;
+    top:70%;
    }
    
    .spinner span {
