--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -1,24 +1,24 @@
-.buttonHome{
-    background-image: url('../../img/arrow.png');
-    width: 50px;
-    height: 50px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 90%;
-    border: none;
-    position: fixed;
-    top: 15px;
-    left: 15px;
-    background-color: transparent;
+.buttonHome {
+  background-image: url("../../img/arrow.png");
+  width: 50px;
+  height: 50px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 90%;
+  border: none;
+  position: fixed;
+  top: 15px;
+  left: 15px;
+  background-color: transparent;
+  cursor: pointer;
 }
-.logo{
-    background-image: url('../../img/Logo1.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 90%;
-    width: 100%;
-    height: 200px;
-    margin-bottom: 10px;
-    margin-top: 10px;
+.logo {
+  background-image: url("../../img/Logo1.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 90%;
+  width: 100%;
+  height: 200px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
-
