--- a/src/components/navBar/index.module.css
+++ b/src/components/navBar/index.module.css
@@ -1,146 +1,167 @@
-:root{
-    --left-margin: 8px;
-    --right-margin: 8px;
-    --padding-top: 4.4rem;
-    --width-button: 95px;
-    --height-button: 150px;
-    }
-
-.buttonNavPizza{
-
-    background: #FFFFFF;
-    background-image: url('../../img/Pizza.png');
-    background-size:contain;
-    background-repeat: no-repeat;
-    background-position-y: 7px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 50px;
-    margin-left:var(--left-margin);
-    margin-right:var(--right-margin);
-
-
-    border: none;
-    text-decoration:none;
-    width:var(--width-button);
-    height: var(--height-button);
-    color: #5171A5;
-
-}
-.title{
-    position:relative;
-    top: 40px;
-    font-family: 'Lilita One';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
+:root {
+  --left-margin: 8px;
+  --right-margin: 8px;
+  --padding-top: 4.4rem;
+  --width-button: 95px;
+  --height-button: 150px;
 }
 
-.buttonNavPostre{
-   
-    background: #FFFFFF;
-    background-image: url('../../img/Postres.png');
-    background-size:contain;
-    background-repeat: no-repeat;
-    background-position-y: 7px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 50px;
-    margin-left:var(--left-margin);
-    margin-right:var(--right-margin);
+.buttonNavPizza {
+  background: #ffffff;
+  background-image: url("../../img/Pizza.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position-y: 7px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 50px;
+  margin-left: var(--left-margin);
+  margin-right: var(--right-margin);
 
-
-    border: none;
-    text-decoration:none;
-    width:var(--width-button);
-    height: var(--height-button);
-    color: #5171A5;
+  border: none;
+  text-decoration: none;
+  width: var(--width-button);
+  height: var(--height-button);
+  color: #5171a5;
+  cursor: pointer;
 }
-.buttonNavPostre span{
-    position:relative;
-    top: 40px;
-    font-family: 'Lilita One';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-  
-}
-.buttonNavBebidas{
-     
-    background: #FFFFFF;
-    background-image: url('../../img/Icono\ Bebida.png');
-    background-size:contain;
-    background-repeat: no-repeat;
-    background-position-y: 7px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 50px;
-    margin-left:var(--left-margin);
-    margin-right:var(--right-margin);
-    color: #5171A5;
-
-    border: none;
-    text-decoration:none;
-    width:var(--width-button);
-    height: var(--height-button);
-}
-.buttonNavBebidas span{
-    position:relative;
-    top: 40px;
-    font-family: 'Lilita One';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-   
+.title {
+  position: relative;
+  top: 40px;
+  font-family: "Lilita One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
 }
 
-.buttonNavEmpanada{
-    background: #FFFFFF;
-    background-image: url('../../img/Empanadas.png');
-    background-size:contain;
-    background-repeat: no-repeat;
-    background-position-y: 7px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 50px;
-    margin-left:var(--left-margin);
-    margin-right:var(--right-margin);
+.buttonNavPostre {
+  background: #ffffff;
+  background-image: url("../../img/Postres.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position-y: 7px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 50px;
+  margin-left: var(--left-margin);
+  margin-right: var(--right-margin);
 
-
-    border: none;
-    text-decoration:none;
-    width:var(--width-button);
-    height: var(--height-button);
-    color: #5171A5;
-}
-.buttonNavEmpanada span{
-    position:relative;
-    top: 40px;
-    font-family: 'Lilita One';
-    font-style: normal;
-    font-weight: 550;
-    font-size: 17px;
+  border: none;
+  text-decoration: none;
+  width: var(--width-button);
+  height: var(--height-button);
+  color: #5171a5;
+  cursor: pointer;
 }
 
+.buttonNavPostre span {
+  position: relative;
+  top: 40px;
+  font-family: "Lilita One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  cursor: pointer;
+}
 
-.nav{
-    display: flex;
-    justify-items: center;
-    justify-content: center;
+.buttonNavBebidas {
+  background: #ffffff;
+  background-image: url("../../img/Icono\ Bebida.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position-y: 7px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 50px;
+  margin-left: var(--left-margin);
+  margin-right: var(--right-margin);
+  color: #5171a5;
+  cursor: pointer;
+
+  border: none;
+  text-decoration: none;
+  width: var(--width-button);
+  height: var(--height-button);
+}
+
+.buttonNavBebidas span {
+  position: relative;
+  top: 40px;
+  font-family: "Lilita One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.buttonNavEmpanada {
+  background: #ffffff;
+  background-image: url("../../img/Empanadas.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position-y: 7px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 50px;
+  margin-left: var(--left-margin);
+  margin-right: var(--right-margin);
+
+  border: none;
+  text-decoration: none;
+  width: var(--width-button);
+  height: var(--height-button);
+  color: #5171a5;
+  cursor: pointer;
+}
+
+.buttonNavEmpanada span {
+  position: relative;
+  top: 40px;
+  font-family: "Lilita One";
+  font-style: normal;
+  font-weight: 550;
+  font-size: 17px;
+  cursor: pointer;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-around;
+  /* justify-items: center; */
+  /* justify-content: center; */
+  width: 100%;
+}
+
+.categorias {
+  width: 111px;
+  height: 27px;
+  left: 16px;
+  top: 125px;
+  margin: 16px auto;
+
+  font-family: "Lilita One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 27px;
+
+  /* Color Secundario */
+
+  color: #5171a5;
+}
+
+@media (max-width: 400px) {
+  .categorias {
+    margin: 16px;
+  }
+
+  .nav {
     width: 100%;
-    
-    }
-    .categorias{
-        position: flex;
-        width: 111px;
-        height: 27px;
-        left: 16px;
-        top: 125px;
-        margin: 16px;
-        
-        font-family: 'Lilita One';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 24px;
-        line-height: 27px;
-        
-        /* Color Secundario */
-        
-        color: #5171A5;
-        }
+    max-width: 90%;
+    display: flex;
+    margin: auto;
+  }
+
+  .buttonNavPizza span,
+  .buttonNavEmpanada span,
+  .buttonNavBebidas span,
+  .buttonNavPostre span {
+    font-size: 13px;
+  }
+}
