--- a/src/views/index.module.css
+++ b/src/views/index.module.css
@@ -11,6 +11,8 @@
   font-size: 24px;
   line-height: 27px;
 
+  text-align: center;
+
   /* Color Secundario */
 
   color: #5171a5;
@@ -100,4 +102,16 @@ Color Secundario
   color: #5171a5;
   font-family: "Lilita One";
   text-align: center;
+}
+
+.categoriasContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+@media (max-width: 400px) {
+  .categorias {
+    text-align: left;
+  }
 }
