--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -12,13 +12,20 @@
   background-color: transparent;
   cursor: pointer;
 }
+
 .logo {
   background-image: url("../../img/Logo1.png");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 90%;
+  background-size: 600px;
   width: 100%;
   height: 200px;
   margin-bottom: 10px;
   margin-top: 10px;
+}
+
+@media (max-width: 400px) {
+  .logo {
+    background-size: 60%;
+  }
 }
