--- a/src/components/product3/index.module.css
+++ b/src/components/product3/index.module.css
@@ -1,148 +1,213 @@
-.conteinerProducts{
-display: flex;
-flex-direction: row;
-padding: 0px;
-margin: 4px;
-width: 95%;
-height: 120px;
-margin-bottom: 20px;
+.conteinerProducts {
+  display: flex;
+  flex-direction: row;
+  padding: 0px;
+  margin: 4px;
+  width: 95%;
+  height: 120px;
+  margin-bottom: 20px;
 
-background: #FFFFFF;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 10px;
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
 
-/* Inside auto layout */
+  /* Inside auto layout */
 
-flex: none;
-order: 0;
-flex-grow: 0;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
-.imgProduct{
-width: 160px;
-height: 120px;
-border-radius: 10px;
-display: block;
+.imgProduct {
+  width: 160px;
+  height: 120px;
+  border-radius: 10px;
+  display: block;
 
+  /* Inside auto layout */
 
-
-/* Inside auto layout */
-
-flex: none;
-order: 0;
-flex-grow: 0;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
-.data{
-    width: 100%;
-    display: block;
+.data {
+  width: 100%;
+  display: block;
 }
-.top{
-    display: flex;
-    justify-content:space-between;
-    width: 99%;
+.top {
+  display: flex;
+  justify-content: space-between;
+  width: 99%;
 }
-.count{
-    width: 100%;
-    display: block
+.count {
+  width: 100%;
+  display: block;
 }
 
-.titleProduct{
-width: 116px;
-height: 18px;
+.titleProduct {
+  width: 116px;
+  height: 18px;
 
-font-family: 'Lilita One';
-font-style: normal;
-font-weight: 350;
-font-size: 20px;
-line-height: 25px;
-padding-left: 10px;
-padding-top: 10px;
-margin-bottom: 60px;
+  font-family: "Lilita One";
+  font-style: normal;
+  font-weight: 350;
+  font-size: 20px;
+  line-height: 25px;
+  padding-left: 10px;
+  padding-top: 10px;
+  margin-bottom: 60px;
 
-/* Color Secundario */
+  /* Color Secundario */
 
-color: #5171A5;
+  color: #5171a5;
 
+  /* Inside auto layout */
 
-/* Inside auto layout */
-
-flex: none;
-order: 0;
-flex-grow: 0;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
-.priceProduct{
-    
-width: 118px;
-height: 18px;
+.priceProduct {
+  width: 118px;
+  height: 18px;
 
-font-family: 'Lilita One';
-font-style: normal;
-font-weight: 400;
-font-size: 25px;
-line-height: 18px;
-margin-left: 10px;
-margin-right: 10px;
-/* Color Secundario */
+  font-family: "Lilita One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 18px;
+  margin-left: 10px;
+  margin-right: 10px;
+  /* Color Secundario */
 
-color: #5171A5;
+  color: #5171a5;
 
+  /* Inside auto layout */
 
-/* Inside auto layout */
-
-flex: none;
-order: 0;
-flex-grow: 1;
+  flex: none;
+  order: 0;
+  flex-grow: 1;
 }
 
-.menos{
-    width: 30px;
-    height: 30px;
-    border-radius: 100%;
-    background-image: url('../../img/menos.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    border: none;
+.menos {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  background-image: url("../../img/menos.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  border: none;
+  position: relative;
+  top: 5px;
+}
+.span {
+  width: 18px;
+  height: 18px;
+
+  font-family: "Lilita One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 18px;
+  padding-left: 17px;
+  padding-right: 17px;
+  margin: 2px;
+  /* margin: 12px; */
+  border: 3px solid #5171a5;
+  border-radius: 20px;
+}
+.mas {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  background-image: url("../../img/mas.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  border: none;
+  position: relative;
+  top: 5px;
+}
+.delete {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  background-image: url("../../img/Frame\ 17.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  border: none;
+  position: relative;
+
+  top: 5px;
+}
+
+@media (max-width: 400px) {
+  .cartButtons {
     position: relative;
-    top: 5px;
-}
-.span{
+  }
 
-    width: 18px;
-    height: 18px;
-    
-    font-family: 'Lilita One';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 18px;
-    padding-left: 17px;
-    padding-right: 17px;
-    margin: 12px;
-    border: 3px solid #5171A5;
-    border-radius: 20px;
+  .priceProduct {
+    margin-left: 10px;
+  }
 }
-.mas{
-    width: 30px;
-    height: 30px;
-    border-radius: 100%;
-    background-image: url('../../img/mas.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    border: none;
-    position: relative;
-    top: 5px;
+
+@media (max-width: 360px) {
+  .cartButtons {
+    width: 120px;
+  }
+
+  .menos {
+    width: 16px;
+  }
+
+  .cartQuantity {
+    width: 16px;
+  }
+
+  .mas {
+    width: 16px;
+  }
+
+  .span {
+    width: 6px;
+    height: 6px;
+    padding-left: 6px;
+    padding-right: 6px;
+    font-size: 18px;
+  }
+
+  .priceProduct {
+    font-size: 18px;
+  }
 }
-.delete{
-    width: 30px;
-    height: 30px;
-    border-radius: 100%;
-    background-image: url('../../img/Frame\ 17.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    border: none;
-    position: relative;
-    
-    top: 5px;
+
+@media (max-width: 280px) {
+  .cartButtons {
+    width: 120px;
+  }
+
+  .menos {
+    width: 12px;
+  }
+
+  .cartQuantity {
+    width: 12px;
+  }
+
+  .mas {
+    width: 12px;
+  }
+
+  .span {
+    width: 4px;
+    height: 4px;
+    padding-left: 4px;
+    padding-right: 4px;
+    font-size: 16px;
+  }
+
+  .priceProduct {
+    font-size: 16px;
+  }
 }
