--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -12,20 +12,18 @@
   background-color: transparent;
   cursor: pointer;
 }
-
-.logo {
-  background-image: url("../../img/Logo1.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 600px;
-  width: 100%;
-  height: 200px;
-  margin-bottom: 10px;
-  margin-top: 10px;
+.buttonHome :hover {
+  transition: all;
 }
 
-@media (max-width: 400px) {
-  .logo {
-    background-size: 60%;
-  }
+.logo {
+  width: 100%;
+  margin-bottom: 10px;
+  display: flex;
+  margin-top: 50px;
+  justify-items: center;
+  justify-content: center;
+}
+.logo img{
+  width: 80%;
 }
