--- a/src/components/navBar/index.module.css
+++ b/src/components/navBar/index.module.css
@@ -14,12 +14,14 @@
   align-items: center;
 }
 .title {
+  display: relative;
   text-align: center;
   font-family: "Lilita One";
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 17px;
   padding-bottom: 15px;
+  margin-bottom: 12px;
 
 }
 .button{
@@ -27,7 +29,8 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 100px;
   width: 5.5em;
-  padding-bottom: 10px;
+  padding-bottom: 6px;
+  padding-top: 10px;
   justify-content: center;
   color: var(--font-color-blue);
   align-items: center;
