--- a/src/components/product1/index.module.css
+++ b/src/components/product1/index.module.css
@@ -1,10 +1,3 @@
-.conteiner {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  margin: 20px;
-  justify-items: center;
-}
 .conteinerProducts {
   display: flex;
   flex-direction: column;
@@ -95,4 +88,13 @@
 Color Secundario
 */
   border-radius: 100%;
+}
+
+@media (max-width: 350px) {
+  .conteiner{
+    display: block;
+    width: 90%;
+    justify-content: center;
+    justify-items: center;
+  }
 }
