--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,15 @@ body {
   --font-color-blue: #5171a5;
 }
 
+.subtitle{
+  margin: 10px;
+  font-family: "Lilita One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 27px;
+  color: var(--font-color-blue)
+}
 
 
 
