--- a/src/components/product1/index.module.css
+++ b/src/components/product1/index.module.css
@@ -5,12 +5,12 @@
   margin: 20px;
   justify-items: center;
 }
+
 .conteinerProducts {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   padding-bottom: 20px;
-  margin: 4px;
+  margin: 20px auto;
   margin-bottom: 40px;
 
   width: 160px;
