--- a/src/components/product2/index.module.css
+++ b/src/components/product2/index.module.css
@@ -57,6 +57,7 @@
   order: 0;
   flex-grow: 1;
 }
+
 .conteinerProducts button {
   position: relative;
   top: 60px;
@@ -107,7 +108,77 @@
   .conteinerProducts {
     width: 95%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     margin: 0px 10px 10px auto;
+  }
+
+  .conteinerProducts button {
+    left: 10px;
+  }
+}
+
+@media (max-width: 360px) {
+  .conteinerProducts button {
+    left: -8px;
+  }
+}
+
+@media (max-width: 355px) {
+  .conteinerProducts button {
+    margin-top: 40px;
+    margin-left: 130px;
+    position: static;
+  }
+}
+
+@media (max-width: 339px) {
+  .conteinerProducts button {
+    margin-top: 40px;
+    margin-left: 120px;
+    position: static;
+  }
+}
+
+@media (max-width: 325px) {
+  .conteinerProducts button {
+    margin-top: 40px;
+    margin-left: 110px;
+    position: static;
+  }
+}
+
+@media (max-width: 318px) {
+  .conteinerProducts button {
+    margin-top: 40px;
+    margin-left: 100px;
+    position: static;
+  }
+}
+
+@media (max-width: 300px) {
+  .conteinerProducts button {
+    margin-top: 40px;
+    margin-left: 90px;
+    position: static;
+  }
+}
+
+@media (max-width: 280px) {
+  .conteinerProducts {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (max-width: 280px) {
+  .conteinerProducts button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+    margin-left: 92px;
+    position: static;
   }
 }
