--- a/src/views/Home/index.module.css
+++ b/src/views/Home/index.module.css
@@ -1,3 +1,5 @@
 .conteiner {
-    grid-template-columns: repeat(auto-fill, minmax(10em, 1fr));
-  }
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(10em, 1fr));
+  gap: 10px;
+}
