--- a/src/components/product3/index.module.css
+++ b/src/components/product3/index.module.css
@@ -112,9 +112,7 @@
   align-items: center;
   text-align: center;
   width: 10px;
-  /* width: 18px; */
   height: 30px;
-  /* height: 18px; */
 
   font-family: "Lilita One";
   font-style: normal;
@@ -122,11 +120,8 @@
   font-size: 25px;
   line-height: 18px;
   padding-left: 16px;
-  /* padding-left: 17px; */
   padding-right: 16px;
-  /* padding-right: 17px; */
-  margin: 2px;
-  /* margin: 12px; */
+  margin-top: 6px;
   border: 3px solid #5171a5;
   border-radius: 20px;
 }
@@ -161,21 +156,20 @@
 
 .cartButtons {
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
 .btnCount {
   display: flex;
-  /* justify-content: space-between; */
   align-items: center;
-  /* margin-left: -65px; */
+  margin-left: -65px;
   padding-right: 10px;
 }
 
 @media (max-width: 400px) {
   .cartButtons {
     position: relative;
-    /* margin-right: 20px; */
   }
 
   .priceProduct {
@@ -185,25 +179,12 @@
 
 @media (max-width: 375px) {
   .span {
-    width: 28px;
-    height: 18px;
+    width: 30px;
+    height: 24px;
     padding-left: 6px;
     padding-right: 6px;
     font-size: 18px;
-    margin: 6px;
   }
-
-  /* .span {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 15px;
-    height: 35px;
-    padding-left: 16px;
-    padding-right: 16px;
-    font-size: 18px;
-    margin: 6px;
-  } */
 }
 
 @media (max-width: 360px) {
@@ -212,8 +193,7 @@
   }
 
   .btnCount {
-    margin-left: -65px;
-    align-items: center;
+    margin-right: -30px;
   }
 
   .delete {
@@ -233,12 +213,11 @@
   }
 
   .span {
-    width: 28px;
-    height: 18px;
+    width: 30px;
+    height: 24px;
     padding-left: 6px;
     padding-right: 6px;
     font-size: 18px;
-    margin: 6px;
   }
 
   .priceProduct {
@@ -247,35 +226,45 @@
 }
 
 @media (max-width: 280px) {
+  .titleProduct {
+    font-size: 15px;
+  }
+
   .cartButtons {
     width: 120px;
   }
 
   .btnCount {
-    margin-left: -90px;
+    margin-right: 10px;
+    align-items: center;
+  }
+
+  .delete {
+    margin-left: -40px;
   }
 
   .menos {
-    width: 12px;
+    width: 16px;
   }
 
   .cartQuantity {
-    width: 12px;
+    width: 16px;
   }
 
   .mas {
-    width: 12px;
+    width: 16px;
   }
 
   .span {
-    width: 4px;
-    height: 4px;
-    padding-left: 4px;
-    padding-right: 4px;
-    font-size: 16px;
+    width: 26px;
+    height: 20px;
+    padding-left: 6px;
+    padding-right: 6px;
+    font-size: 18px;
   }
 
   .priceProduct {
-    font-size: 16px;
+    font-size: 15px;
+    margin-right: -10px;
   }
 }
