--- a/src/views/index.module.css
+++ b/src/views/index.module.css
@@ -1,11 +1,3 @@
-/* font-family: "Lilita One"; */
-/* font-style: normal; */
-/* font-weight: 400; */
-/* font-size: 24px; */
-/* line-height: 27px; */
-
-/* text-align: center; */
-
 /* Color Secundario */
 
 .conteiner {
@@ -163,5 +155,9 @@ Color Secundario
   .conteiner {
     flex-direction: column;
     justify-content: center;
+  }
+
+  .cartContainer {
+    width: 100%;
   }
 }
