--- a/src/components/product1/index.module.css
+++ b/src/components/product1/index.module.css
@@ -60,24 +60,12 @@
   flex-grow: 1;
 }
 .conteinerProducts div{
-  display: flex;
+  display: grid;
+  grid-template-columns: 70% 30%;
   width: 100%;
   height: 50px;
-  justify-items: center;
-  justify-content: end;
-}
-.conteinerProducts button {
-  position: relative;
-  right: 0.5em;
-  width: 30px;
-  height: 30px;
-  background-image: url("../../img/mas.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  border: none;
-  background-size: 100%;
-  border-radius: 100%;
-  margin-bottom: 12px;
+  /* justify-items: center; */
+  align-items: center;
 }
 
 @media (max-width: 330px) {
