--- a/src/components/product1/index.module.css
+++ b/src/components/product1/index.module.css
@@ -1,10 +1,10 @@
 .conteinerProducts {
   display: flex;
   flex-direction: column;
-  margin: 20px auto;
+  margin: 10px auto;
 
-  width: 160px;
-  height: 200px;
+  width: 11em;
+  height: 220px;
 
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -12,7 +12,7 @@
 }
 
 .imgProduct {
-  width: 160px;
+  width: 11em;
   height: 120px;
   border-radius: 10px;
 
@@ -23,14 +23,13 @@
   flex-grow: 0;
 }
 .titleProduct {
-  width: 116px;
+  width: 120px;
   height: auto;
 
   font-family: "Lilita One";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 18px;
   padding-left: 10px;
   padding-top: 10px;
 
@@ -49,7 +48,7 @@
   font-family: "Lilita One";
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 18px;
   justify-items: center;
   margin-top: 5%;
@@ -61,32 +60,32 @@
 }
 .conteinerProducts div{
   display: grid;
-  grid-template-columns: 70% 30%;
+  grid-template-columns: 55% 45%;
   width: 100%;
+  position: relative;
   height: 50px;
   /* justify-items: center; */
   align-items: center;
 }
 
-@media (max-width: 330px) {
+@media (max-width: 370px) {
   .conteinerProducts {
-    width: 280px;
-    height: 340px;
+    width: 290px;
+    height: 380px;
+  }
+  .conteinerProducts div{
+    grid-template-columns: 70% 30%;
   }
   .imgProduct {
-    width: 280px;
+    width: 290px;
     height: 230px;
 }
 .titleProduct{
-  width: 70%;
+  width: 60%;
   font-size: 30px;
 }
 .priceProduct{
   font-size: 25px;
 }
-.conteinerProducts button{
-  width: 50px;
-  right: 1em;
-  height: 50px;
-}
+
 }
