view file update style

--- a/src/components/inputproduct/index.module.css
+++ b/src/components/inputproduct/index.module.css
@@ -8,7 +8,7 @@
   max-width: 50px;
   margin-top: 12px;
   margin-left: 15px;
-  font-weight: 100px;
+  font-weight: 100;
   font-family: "Lilita One";
   width: auto;
   height: 35px;
