--- a/src/views/view.css
+++ b/src/views/view.css
@@ -91,7 +91,6 @@
 
 .div-view-purchase-list {
   width: 100%;
-  max-width: auto;
   display: flex;
   justify-content: flex-end;
   margin-left: 20px;
@@ -178,7 +177,7 @@
 
 @media (max-width: 1366px) {
   .view-purchase-footer {
-    top: 180vh;
+    top: 155vh;
   }
 
   .div-btn-editar {
@@ -187,6 +186,16 @@
 }
 
 @media (max-width: 1280px) {
+  .view-purchase-footer {
+    top: 96vh;
+  }
+
+  .div-btn-editar {
+    margin-top: 60px;
+  }
+}
+
+@media (max-width: 1264px) {
   .view-purchase-footer {
     top: 120vh;
   }
@@ -206,9 +215,30 @@
   }
 }
 
+@media (max-width: 1115px) {
+  .view-purchase-footer {
+    top: 110vh;
+  }
+
+  .div-btn-editar {
+    margin-top: 60px;
+  }
+}
+
 @media (max-width: 1024px) {
   .view-purchase-footer {
-    top: 150vh;
+    top: 125vh;
+  }
+
+  .div-btn-editar {
+    margin-top: 80px;
+  }
+}
+
+@media (max-width: 915px) {
+  .view-purchase-footer {
+    top: 130vh;
+    margin-top: 10px;
   }
 
   .div-btn-editar {
@@ -229,8 +259,8 @@
 
 @media (max-width: 820px) {
   .view-purchase-footer {
-    top: 100vh;
-    margin-top: 50px;
+    top: 75vh;
+    margin-top: 250px;
   }
 
   .div-btn-editar {
@@ -240,7 +270,7 @@
 
 @media (max-width: 540px) {
   .view-purchase-footer {
-    top: 110vh;
+    top: 80vh;
     margin-top: 200px;
   }
 
@@ -251,8 +281,17 @@
 
 @media (max-width: 414px) {
   .view-purchase-footer {
-    top: 98vh;
-    margin-top: 100px;
+    top: 70vh;
+  }
+
+  .div-btn-editar {
+    margin-top: 80px;
+  }
+}
+
+@media (max-width: 390px) {
+  .view-purchase-footer {
+    top: 68vh;
   }
 
   .div-btn-editar {
@@ -262,7 +301,7 @@
 
 @media (max-width: 375px) {
   .view-purchase-footer {
-    top: 115vh;
+    top: 76vh;
   }
 
   .div-btn-editar {
@@ -271,6 +310,10 @@
 }
 
 @media (max-width: 360px) {
+  .view-purchase-footer {
+    top: 70vh;
+  }
+
   .div-view-purchase-list {
     width: 100%;
     margin-left: 20px;
@@ -297,12 +340,12 @@
   }
 
   .view-purchase-footer {
-    top: 130vh;
+    top: 80vh;
   }
 }
 
 .view-btn-purchase {
-  background-color: var(--color);
+  background-color: red;
   width: 329px;
   height: 48px;
   border-radius: 30px;
